fix: headbutt animation placement on mobile

--- a/src/components/molecules/Headbutt.css
+++ b/src/components/molecules/Headbutt.css
@@ -69,7 +69,7 @@
   font-size: 2em;
 }
 .Headbutt .player img {
-  height: 80%;
+  height: 65%;
 }
 
 .Headbutt .player.Materazzi{
